manifests/Service/nginx-second-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-second-svc
spec:
  type: ClusterIP
  selector:
    app: nginx-app2
  ports:
  - port: 8080
    targetPort: 80
