manifests/Service/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: test-1098076948.ap-south-2.elb.amazonaws.com
    http:
      paths:
      - path: /new
        pathType: Prefix
        backend:
          service:
            name: nginx-second-svc
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-clusterip-svc
            port:
              number: 8080
